logs/aio-hs2.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/aio_hs2-0.2.egg-info'...
Listing './lib/python3.5/site-packages/aiohs2'...
Listing './lib/python3.5/site-packages/aiohs2/lowlevel'...
Listing './lib/python3.5/site-packages/aiohs2/lowlevel/TCLIService'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pure_sasl-0.4.0.egg-info'...
Listing './lib/python3.5/site-packages/puresasl'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/thrift'...
Listing './lib/python3.5/site-packages/thrift/protocol'...
Compiling './lib/python3.5/site-packages/thrift/protocol/TJSONProtocol.py'...
***   File "./lib/python3.5/site-packages/thrift/protocol/TJSONProtocol.py", line 229
    character = json.JSONDecoder().decode('"\u00%s"' % self.trans.read(2))
                                         ^
SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in position 1-4: truncated \uXXXX escape

Listing './lib/python3.5/site-packages/thrift/server'...
Listing './lib/python3.5/site-packages/thrift/transport'...
Listing './share'...
Listing './share/python-wheels'...
